move classifier logic and add evaluation

--- a/explore.ipynb
+++ b/explore.ipynb
@@ -32,6 +32,37 @@
     "    text = page.find(\"{http://www.mediawiki.org/xml/export-0.10/}revision/{http://www.mediawiki.org/xml/export-0.10/}text\").text\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = torch.tensor([[0], [1], [2]])\n",
+    "a.reshape(-1)\n",
+    "[\"a\"][:10]"
+   ]
   }
  ],
  "metadata": {
