--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -77,6 +77,7 @@ While no rigorous checks are carried out in this paper in reference to the corre
 
 Among the selected measures, WIT (ratio of words in the 3000 most frequent English words) appears to be the most well-behaved, insofar as the prompted CEFR levels mostly maintain their natural progression. Figure~\ref{fig:wit-mean} shows the isolated scores for the WIT metric, which show a correlation with difficulty. Wikipedia and Simple Wikipedia articles have lower values, however this is possibly connected to those texts being several times longer.
 
+LLDL (length of longest dependency link)
 
 
 \section{Discussion and future research}
