--- a/paper/figs/lldl_means.tex
+++ b/paper/figs/lldl_means.tex
@@ -2,5 +2,5 @@
     \centering
     \includegraphics[width=\columnwidth]{figs/assets/plot-LLDL.png}
     \caption{Mean metric values for LLDL.}
-    \label{fig:wit-mean}
+    \label{fig:lldl-mean}
 \end{figure}
