--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -77,10 +77,16 @@ While no rigorous checks are carried out in this paper in reference to the corre
 
 Among the selected measures, WIT (ratio of words in the 3000 most frequent English words) appears to be the most well-behaved, insofar as the prompted CEFR levels mostly maintain their natural progression. Figure~\ref{fig:wit-mean} shows the isolated scores for the WIT metric, which show a correlation with difficulty. Wikipedia and Simple Wikipedia articles have lower values, however this is possibly connected to those texts being several times longer.
 
-LLDL (length of longest dependency link)
+\input{figs/lldl_means.tex}
+
+LLDL (length of longest dependency link) is another metric that performs well in terms of level differentiation. It also reflects the common belief that the biggest difficulty spike in language learning - as shown by Figure~\ref{fig:lldl-mean}. As with most metrics, however, the natural progression of the CEFR levels is lost, particularly in the middle portions.
 
 
 \section{Discussion and future research}
+
+This work attempted to gauge true readability levels of GPT-3 output texts with prompts across 10 topics and CEFR proficiency levels, optimising thus for the second language learning application environment. Outputs computed from the metrics set suggest that GPT-3 is at least somewhat aware of syntax and lexis when performin generation for a target readability level.
+
+Future research into this topic could explore a wider variety of textual metrics, as this work only selected a handful that lent themselves particularly well to interpretation and did not require steep hardware requirements to obtain.
 
 \section*{Acknowledgements}
 
