--- a/paper/custom.bib
+++ b/paper/custom.bib
@@ -32,3 +32,18 @@
   pages     = {62--69},
   note      = {\url{http://arXiv.org/abs/cs/0205028}}
 }
+
+@inproceedings{Deutsch_2020,
+	doi = {10.18653/v1/2020.bea-1.1},
+  
+	url = {https://doi.org/10.18653%2Fv1%2F2020.bea-1.1},
+  
+	year = 2020,
+	publisher = {Association for Computational Linguistics},
+  
+	author = {Tovly Deutsch and Masoud Jasbi and Stuart Shieber},
+  
+	title = {Linguistic Features for Readability Assessment},
+  
+	booktitle = {Proceedings of the Fifteenth Workshop on Innovative Use of {NLP} for Building Educational Applications}
+}
