--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -86,7 +86,8 @@ LLDL (length of longest dependency link) is another metric that performs well in
 
 This work attempted to gauge true readability levels of GPT-3 output texts with prompts across 10 topics and CEFR proficiency levels, optimising thus for the second language learning application environment. Outputs computed from the metrics set suggest that GPT-3 is at least somewhat aware of syntax and lexis when performin generation for a target readability level.
 
-Future research into this topic could explore a wider variety of textual metrics, as this work only selected a handful that lent themselves particularly well to interpretation and did not require steep hardware requirements to obtain.
+Future research into this topic could explore a wider variety of textual metrics, as this work only selected a handful that lent themselves particularly well to interpretation and did not require steep hardware requirements to obtain. Since recent research (e.g. \citealp{Deutsch_2020}) has also focused on readability assessment through neural approaches without such metrics, this could also be explored with AI text data.
+
 
 \section*{Acknowledgements}
 
