--- a/paper/custom.bib
+++ b/paper/custom.bib
@@ -47,3 +47,13 @@
   
 	booktitle = {Proceedings of the Fifteenth Workshop on Innovative Use of {NLP} for Building Educational Applications}
 }
+
+
+@inproceedings{pennington2014glove,
+	author = {Jeffrey Pennington and Richard Socher and Christopher D. Manning},
+	booktitle = {Empirical Methods in Natural Language Processing (EMNLP)},
+	pages = {1532--1543},
+	title = {GloVe: Global Vectors for Word Representation},
+	url = {http://www.aclweb.org/anthology/D14-1162},
+	year = {2014},
+	bdsk-url-1 = {http://www.aclweb.org/anthology/D14-1162}}
