--- a/paper/figs/lldl_means.tex
+++ b/paper/figs/lldl_means.tex
@@ -1,4 +1,4 @@
-\begin{figure}[h]
+\begin{figure}[ht]
     \centering
     \includegraphics[width=\columnwidth]{figs/assets/plot-LLDL.png}
     \caption{Mean metric values for LLDL.}
