--- a/paper/tables/means.tex
+++ b/paper/tables/means.tex
@@ -23,7 +23,7 @@
     \end{tabular}
     \caption{
         \centering
-        Average metric results for each difficulty level and metric. The 3 hightest values are highlighted for each metric. For WIT, the lowest 3 are highlighted instead.
+        Average metric results for each difficulty level and metric. The 3 highest values are highlighted for each metric. For WIT, the lowest 3 are highlighted instead.
     }
     \label{tab:means}
 \end{table*}
